--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "simple-blog-frontend",
+    "name": "chat-frontend",
     "version": "0.0.0",
     "private": true,
     "main": "dist/src/index.js",
