--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "chat-frontend",
-    "version": "0.0.0",
+    "version": "0.0.1",
     "private": true,
     "main": "dist/src/index.js",
     "scripts": {
@@ -68,6 +68,7 @@
         "fork-ts-checker-webpack-plugin": "^0.5.0",
         "html-webpack-plugin": "3.2.0",
         "morgan": "~1.9.0",
+        "jest-diff": "25.1.0",
         "node-sass": "^4.12.0",
         "npm-check": "^5.7.1",
         "path": "0.12.7",
